--- a/package.json
+++ b/package.json
@@ -10,4 +10,14 @@ json
     "@whiskeysockets/baileys": "^6.6.6"
   }
 }
+`json
+{
+  "name": "bot-protection",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {}
+}
 ```
